# bevy_flock_simulation_engine

./: .gitignore  Cargo.toml  README.md
assets_example/: assets.ron
examples/: bogstandard.rs
src/: components.rs  constants.rs  helpers.rs  inspector.rs  lib.rs  main.rs  miscellaneous.rs  resources.rs  states.rs  systems.rs
src/asset_related/: mod.rs  resources.rs  systems.rs
src/boid_simulation/: bundles.rs  components.rs  mod.rs  resources.rs  rules.rs  systems.rs
