[package]
name = "bevy_flock_simulation_engine"
authors = ["Arturo García Richardson", "Arturo García Richardson <agrg11@alu.ua.es>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_flock_simulation_engine"
path = "src/lib.rs"

[dependencies]
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_asset_loader = { version = "0.23.0", features = ["2d", "standard_dynamic_assets"] }
bevy_egui = "0.34.1"
itertools = "0.14.0"
rand = "0.9.0"
